[package]
name = "faster-rs"
version = "0.3.0"
authors = ["Max Meldrum <mmeldrum@kth.se>", "Matthew Brookes <mbrookes1304@gmail.com>"]
edition = "2018"
keywords = ["concurrent", "embedded", "key-value-store"]
description = "Rust wrapper for FASTER by Microsoft Research"
repository = "https://github.com/faster-rs/faster-rs"
license = "MIT"
readme = "README.md"

[dependencies]
bincode = "1.1.2"
libc = "0.2"
libfaster-sys = { path = "libfaster-sys", version = "0.3.0" }
serde = "1.0.89"
serde_derive = "1.0.89"

[dev-dependencies]
tempfile = "3"
