[package]
name = "libfaster-sys"
description = "Bindings for FASTER"
version = "0.9.0"
authors = ["Max Meldrum <mmeldrum@kth.se>", "Matthew Brookes <mbrookes1304@gmail.com>"]
edition = "2018"
repository = "https://github.com/faster-rs/faster-rs.git"
keywords = [ "FASTER", "ffi", "experimental" ]
build = "build.rs"
links = "faster"
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.50"
cmake = "0.1"
